--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "browser-locale": "^1.0.2",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
