--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-sync": "^2.18.8",
     "chai": "^4.0.0-canary.1",
     "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
     "ejs": "^2.5.6",
     "eslint": "^3.18.0",
