--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.23.0",
     "browser-locale": "^1.0.2",
     "classnames": "^2.2.5",
+    "cookieconsent": "^3.0.4",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
     "react": "^15.4.2",
